Sync P2P networking with 1.16 and fix Java 8 build
- Replace legacy WebSocket rendezvous with HTTP/SSE OkHttp client
- Update STUN and TURN relay stack to match 1.16 improvements
- Fix Java 8 build by removing invalid --release javac flag