@@ -26,9 +26,10 @@ public abstract class BaseSafraClientConfig {
     protected String openToLanFixedCode = "";
     protected Map<String, String> openToLanGameRules = new LinkedHashMap<>();
     protected boolean directConnectP2pEnabled = true;
+    protected boolean dontSayCode = false;
     protected boolean neverUseRelayServer = false;
     protected String rendezvousUrl = "";
-    protected String siteApiVersion = "1.0";
+    protected String siteApiVersion = "3.0";
 
     protected abstract Path configPath();
 
@@ -65,6 +66,10 @@ public abstract class BaseSafraClientConfig {
         }
     }
 
+    public synchronized boolean isDontSayCode() {
+        return dontSayCode;
+    }
+
     public synchronized boolean isNeverUseRelayServer() {
         return neverUseRelayServer;
     }
@@ -97,6 +102,7 @@ public abstract class BaseSafraClientConfig {
         String normalized = normalizeSiteApiVersion(siteApiVersion);
         if (!this.siteApiVersion.equals(normalized)) {
             this.siteApiVersion = normalized;
+            P2pConstants.setRuntimeSiteApiVersion(normalized);
             save();
         }
     }
@@ -137,7 +143,7 @@ public abstract class BaseSafraClientConfig {
 
     public synchronized String ensureOpenToLanFixedCode() {
         String normalized = normalizeOpenToLanFixedCode(openToLanFixedCode);
-        if (normalized.isBlank()) {
+        if (normalized.trim().isEmpty()) {
             normalized = P2pShareCode.createRendezvousCode(P2pShareCode.FIXED_RENDEZVOUS_CODE_LENGTH);
         }
         if (!normalized.equals(openToLanFixedCode)) {
@@ -161,9 +167,8 @@ public abstract class BaseSafraClientConfig {
         }
     }
 
-    public synchronized void resetOpenToLanServerSettings() {
-        boolean changed = openToLanAllowCommandsEnabled || !openToLanGameRules.isEmpty();
-        openToLanAllowCommandsEnabled = false;
+    public synchronized void resetOpenToLanGameRules() {
+        boolean changed = !openToLanGameRules.isEmpty();
         openToLanGameRules = new LinkedHashMap<>();
         if (changed) {
             save();
@@ -220,12 +225,12 @@ public abstract class BaseSafraClientConfig {
             rendezvousUrl = normalizedRendezvousUrl;
             changed = true;
         }
-
         String normalizedSiteApiVersion = normalizeSiteApiVersion(siteApiVersion);
         if (!normalizedSiteApiVersion.equals(siteApiVersion)) {
             siteApiVersion = normalizedSiteApiVersion;
             changed = true;
         }
+
         return changed;
     }
 
@@ -234,9 +239,10 @@ public abstract class BaseSafraClientConfig {
     }
 
     private static String normalizeSiteApiVersion(String siteApiVersion) {
-        return siteApiVersion == null || siteApiVersion.isBlank()
-            ? "1.0"
-            : siteApiVersion.trim();
+        if (siteApiVersion == null || siteApiVersion.trim().isEmpty()) {
+            return "3.0";
+        }
+        return "3.0";
     }
 
     private static String normalizeOpenToLanFixedCode(String openToLanFixedCode) {
